--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     <a class="nav-link hvr-underline-from-center" href="#">TOP<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item hvr-underline-from-center">
-                    <a class="nav-link" href="#anchor1">關於紹宇</a>
+                    <a class="nav-link" href="#about">關於紹宇</a>
                 </li>
                 <li class="nav-item hvr-underline-from-center">
-                    <a class="nav-link" href="#anchor2">親友合影</a>
+                    <a class="nav-link" href="#family">親友合影</a>
                 </li>
                 <li class="nav-item hvr-underline-from-center">
-                    <a class="nav-link" href="#anchor3">留下祝福</a>
+                    <a class="nav-link" href="#guestbook">留下祝福</a>
                 </li>
             </ul>
         </div>
@@ -124,7 +124,7 @@
 
     <!-- main -->
     <section class="main position-r">
-        <div id="anchor1" class="fake-anchor"></div>
+        <div id="about" class="fake-anchor"></div>
         <div class="container">
             <div class="row text-gray-dark">
                 <div class="col-12 col-lg-6 info">
@@ -146,7 +146,7 @@
                         <div class="box mb-3"></div>
                         <p>紹宇日常</p>
                     </div>
-                    <div class="d-flex flex-wrap justify-content-center" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="100" data-aos-easing="ease-in-out">
+                    <div class="d-flex flex-wrap justify-content-center" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100" data-aos-easing="ease-in-out">
                         <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
                             <div class="pixbox pixbox01 hvr-bounce-in"></div>
                         </a>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="text-gray-dark mt-5 bg-secondary position-r family">
-            <div id="anchor2" class="fake-anchor"></div>
+            <div id="family" class="fake-anchor"></div>
             <div class="carousel">
                 <div class="subtitle text-center mb-4">
                     <div class="box mb-3"></div>
@@ -252,7 +252,7 @@
         </div>
     </section>
     <section class="guestbook position-r">
-        <div id="anchor3" class="fake-anchor"></div>
+        <div id="guestbook" class="fake-anchor"></div>
         <div class="container">
             <div class="row">
                 <div class="col">
