--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <h1><a class="navbar-brand text-gray text-bold ml-5 d-flex" href="#">
+        <h1><a class="navbar-brand text-gray text-bold ml-sm-5 d-flex" href="#">
             <span class="d-none d-lg-block">Yoyo's Birth Announcement</span>
-            <span class="d-block d-lg-none">Yoyo's Birth Anc</span>
+            <span class="d-none d-sm-block d-lg-none">Yoyo's Birth Anc</span>
+            <span class="d-block d-sm-none">Yoyo's</span>
             <i class="fas fa-heart ml-3 heartbeat"></i></a>
         </h1>
-        <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler mr-sm-5" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -132,7 +133,7 @@
                         <div class="box mb-3"></div>
                         <p>關於紹宇</p>
                     </div>
-                    <ul class="info_content m-auto w-75" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100" data-aos-easing="ease-in-out">
+                    <ul class="info_content m-auto" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100" data-aos-easing="ease-in-out">
                         <li class="mb-3">性別：<i class="fas fa-mars"></i></li>
                         <li class="mb-3">生日：2020/10/02</li>
                         <li class="mb-3">星座：天秤座</li>
