--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
                             <img src="img/family/12.jpg" class="w-100" alt="" srcset="">
                             <p class="swiper-text mt-3">阿姨來看我</p>
                         </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/13.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">宜蓉師婆來看媽媽與我</p>
+                        </div>
                     </div>
                     <!-- Add Pagination -->
                     <div class="swiper-pagination"></div>
