--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
 
+    <!-- loading -->
+    <div class="loading">
+        <div class="loading_inner">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <span>Loading</span>
+        </div>
+    </div>
+    
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <h1><a class="navbar-brand text-gray text-bold ml-sm-5 d-flex" href="#">
@@ -305,6 +318,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+        //loading
+            $(document).ready(function() {
+                setTimeout(function() {
+                    $(".loading").fadeOut(500);
+                }, 2000);
+            });
+
         //toggle自動收合
         var active = false
         $(window).resize(function () {
