--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         //toggle自動收合
         var active = false
         $(window).resize(function () {
-            console.log($(window).width() < 768);
+            // console.log($(window).width() < 768);
             if ($(window).width() < 992) {  //當視窗小於768時才運作
                 active = true
             } else {
