--- a/index.html
+++ b/index.html
@@ -262,15 +262,43 @@
                         </div>
                         <div class="swiper-slide">
                             <img src="img/family/11.jpg" class="w-100" alt="" srcset="">
-                            <p class="swiper-text mt-3">爺爺來看我</p>
+                            <p class="swiper-text mt-3">爺爺和我</p>
                         </div>
                         <div class="swiper-slide">
                             <img src="img/family/12.jpg" class="w-100" alt="" srcset="">
-                            <p class="swiper-text mt-3">阿姨來看我</p>
+                            <p class="swiper-text mt-3">珊蓉阿姨和我</p>
                         </div>
                         <div class="swiper-slide">
                             <img src="img/family/13.jpg" class="w-100" alt="" srcset="">
                             <p class="swiper-text mt-3">宜蓉師婆來看媽媽與我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/14.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">舅舅、舅媽和滿月的我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/15.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">叔叔和我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/16.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">嬸嬸和我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/17.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">姑姑和我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/18.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">嬸婆和我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/19.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">姑姑們和我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/20.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">芝芝老師、怡瑄老師和我</p>
                         </div>
                     </div>
                     <!-- Add Pagination -->
